# USB-KVM

./: .gitignore  README.md
.github/workflows/: build.yml
Linux/: CMakeLists.txt  install.sh
Linux/cli/: kvmctl.cpp
Linux/gnome-extension/: extension.js  metadata.json
Linux/udev/: 70-usbkvm.rules
USB KVM/: HIDCommand.m  HIDManager.m  HID_Utilities.h  HID_Utilities.m  KVMController.m  LaunchOnStartup.h  LaunchOnStartup.m  P_HIDCommand.h  P_HIDCommand.m  P_HIDManager.m  StatusItemView.h
USB KVM.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
USB KVM.xcodeproj/project.xcworkspace/xcuserdata/headsoft.xcuserdatad/: UserInterfaceState.xcuserstate
USB KVM.xcodeproj/xcshareddata/xcschemes/: USB KVM.xcscheme
Windows/: CMakeLists.txt
Windows/res/: app.manifest  app.rc
Windows/src/: main.cpp  resource.h
cmake/: mingw-w64.cmake
core/: CMakeLists.txt
core/include/usbkvm/: usbkvm.h
core/src/: device_linux.cpp  device_windows.cpp  devices.cpp  internal.h
macOS/USB KVM/: HIDCommand.h  HIDCommand.m  HIDManager.h  Info.plist  KVMController.h  P_HIDManager.h  P_HIDManager.m  StatusItemView.m  main.m
macOS/USB KVM.xcodeproj/: project.pbxproj
macOS/USB KVM.xcodeproj/xcuserdata/headsoft.xcuserdatad/xcschemes/: xcschememanagement.plist
macOS/USB KVM/Assets.xcassets/IconStatusBar.imageset/: Contents.json
macOS/USB KVM/Assets.xcassets/IconStatusBarError.imageset/: Contents.json
macOS/USB KVM/Base.lproj/: MainMenu.xib
tools/: make_icons.py
